// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`an arrow parameter does not shadow a variable after the arrow body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['f']({a:(_v)=>_v,b:ctx['v']}), node, key, "\\u00021");
  }
}"
`;

exports[`an arrow parameter does not shadow a variable after the arrow body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['f'](_e=>_e,ctx['e']), node, key, "\\u00021");
  }
}"
`;

exports[`misc > complex template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, createComponent, withKey, keyOf, attrValue } = helpers;
  const comp1 = createComponent(app, \`SlotButton\`, true, false, false, ["class","slot"]);
  
  let block1 = createBlock(\`<div block-attribute-0="class"><div block-attribute-1="class"><div class="batch_header"><a block-attribute-2="href" block-attribute-3="class" title="View Batch"><block-child-0/><block-child-1/><i class="arrow fa fa-window-maximize"/></a></div><block-child-2/><div class="batch_slots"><block-child-3/><block-child-4/></div><div class="batch_commits"><block-child-5/></div></div></div>\`);
  let block3 = createBlock(\`<i class="fa fa-exclamation-triangle"/>\`);
  let block4 = createBlock(\`<span><i class="fa fa-cog fa-spin fa-fw"/> preparing</span>\`);
  let block8 = createBlock(\`<div class="slot_filler"/>\`);
  let block10 = createBlock(\`<div class="one_line"><a block-attribute-0="href" block-attribute-1="class"><block-child-0/><block-child-1/><block-child-2/><block-child-3/><block-child-4/></a><a block-attribute-2="href" class="badge badge-light" title="View Commit on Github"><i class="fa fa-github"/></a><span><block-child-5/></span></div>\`);
  let block11 = createBlock(\`<i class="fa fa-fw fa-hashtag" title="This commit is a new head"/>\`);
  let block12 = createBlock(\`<i class="fa fa-fw fa-link" title="This commit is an existing head from bundle branches"/>\`);
  let block13 = createBlock(\`<i class="fa fa-fw fa-code-fork" title="This commit is matched from a base batch with matching merge_base"/>\`);
  let block14 = createBlock(\`<i class="fa fa-fw fa-clock-o" title="This commit is the head of a base branch"/>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3, b4, b5, b7, b9;
    let attr1 = \`batch_tile \${ctx['options'].more?'more':'nomore'}\`;
    let attr2 = \`card bg-\${ctx['klass']}-light\`;
    let attr3 = \`/runbot/batch/\${ctx['batch'].id}\`;
    let attr4 = \`badge badge-\${ctx['batch'].has_warning?'warning':'light'}\`;
    b2 = safeOutput(ctx['batch'].formated_age, node, key, "\\u00021");
    if (ctx['batch'].has_warning) {
      b3 = block3();
    }
    if (ctx['batch'].state=='preparing') {
      b4 = block4();
    }
    const ctx1 = ctx;
    const [k_block5, v_block5, l_block5, c_block5] = prepareList(ctx['batch'].slot_ids.filter(_slot=>_slot.build_id.id&&!_slot.trigger_id.manual&&(ctx['options'].trigger_display[_slot.trigger_id.id])));
    for (let i1 = 0; i1 < l_block5; i1++) {
      let ctx = Object.create(ctx1);
      ctx["slot"] = k_block5[i1];
      const key1 = ctx['slot'].id;
      const skey1 = keyOf(key1);
      c_block5[i1] = withKey(comp1({class: ctx['slot_container'],slot: ctx['slot']}, key + \`\\u00022\\u0002:\${skey1}\`, node, this, null), key1);
    }
    b5 = list(c_block5);
    const ctx2 = ctx;
    const [k_block7, v_block7, l_block7, c_block7] = prepareList([1,2,3,4]);
    for (let i1 = 0; i1 < l_block7; i1++) {
      let ctx = Object.create(ctx2);
      ctx["x"] = k_block7[i1];
      const key1 = ctx['x'];
      c_block7[i1] = withKey(block8(), key1);
    }
    b7 = list(c_block7);
    const ctx3 = ctx;
    const [k_block9, v_block9, l_block9, c_block9] = prepareList(ctx['commit_links']);
    for (let i1 = 0; i1 < l_block9; i1++) {
      let ctx = Object.create(ctx3);
      ctx["commit_link"] = k_block9[i1];
      const key1 = ctx['commit_link'].id;
      let b11, b12, b13, b14, b15, b16;
      let attr5 = \`/runbot/commit/\${ctx['commit_link'].commit_id}\`;
      let attr6 = \`badge badge-light batch_commit match_type_\${ctx['commit_link'].match_type}\`;
      if (ctx['commit_link'].match_type=='new') {
        b11 = block11();
      }
      if (ctx['commit_link'].match_type=='head') {
        b12 = block12();
      }
      if (ctx['commit_link'].match_type=='base_match') {
        b13 = block13();
      }
      if (ctx['commit_link'].match_type=='base_head') {
        b14 = block14();
      }
      b15 = safeOutput(ctx['commit_link'].commit_dname, node, key, "\\u00023", 1, key1);
      let attr7 = attrValue('https://%s/commit/%s'%(ctx['commit_link'].commit_remote_url,ctx['commit_link'].commit_name));
      b16 = safeOutput(ctx['commit_link'].commit_subject, node, key, "\\u00024", 1, key1);
      c_block9[i1] = withKey(block10([attr5, attr6, attr7], [b11, b12, b13, b14, b15, b16]), key1);
    }
    b9 = list(c_block9);
    return block1([attr1, attr2, attr3, attr4], [b2, b3, b4, b5, b7, b9]);
  }
}"
`;

exports[`misc > global 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, safeOutput, zero, callTemplate, withoutZero, zeroCtx, withKey, keyOf } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block4 = createBlock(\`<span><block-child-0/></span>\`);
  
  function callBody1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const ctx2 = Object.create(ctx);
    ctx2["foo"] = 'aaa';
    ctx2[zero] = null;
    const b8 = callTemplate(\`_callee-uses-foo\`, this, app, ctx2, node, key + \`\\u00022\`);
    const b9 = callTemplate(\`_callee-uses-foo\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00023\`);
    ctx["foo"] = 'bbb';
    const b10 = callTemplate(\`_callee-uses-foo\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00024\`);
    return multi([b8, b9, b10]);
  }
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList([4,5,6]);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["value"] = k_block2[i1];
      ctx["value_first"] = i1 === 0;
      ctx["value_last"] = i1 === k_block2.length - 1;
      ctx["value_index"] = i1;
      ctx["value_value"] = v_block2[i1];
      const key1 = ctx['value'];
      const skey1 = keyOf(key1);
      const b5 = safeOutput(ctx['value'], node, key, "\\u00021", 1, key1);
      const b4 = block4([], [b5]);
      const ctx3 = Object.create(ctx);
      ctx3[zero] = callBody1;
      ctx3[zeroCtx] = ctx;
      const b6 = callTemplate(\`_callee-asc\`, this, app, ctx3, node, key + \`\\u00025\\u0002:\${skey1}\`);
      c_block2[i1] = withKey(multi([b4, b6]), key1);
    }
    const b2 = list(c_block2);
    const b11 = callTemplate(\`_callee-asc-toto\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00026\`);
    return block1([], [b2, b11]);
  }
}"
`;

exports[`misc > global 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { zero, zeroCtx } = helpers;
  
  let block1 = createBlock(\`<año block-attribute-0="falló"><block-child-0/></año>\`);
  
  return function template(ctx, node, key = "") {
    let attr1 = 'agüero';
    const b2 = ctx[zero] ? ctx[zero].call(this, ctx[zeroCtx], node, key + \`\\u00021\`) : text("");
    return block1([attr1], [b2]);
  }
}"
`;

exports[`misc > global 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  function defaultContent1(ctx, node, key = "") {
    return text(\`foo default\`);
  }
  
  return function template(ctx, node, key = "") {
    const out1 = ctx['foo'];
    const b2 = out1 === undefined || out1 === null ? toggler("default", defaultContent1.call(this, ctx, node, key + \`\\u00021\`)) : safeOutput(out1, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`misc > global 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  function defaultContent1(ctx, node, key = "") {
    return text(\`toto default\`);
  }
  
  return function template(ctx, node, key = "") {
    const out1 = ctx['toto'];
    const b2 = out1 === undefined || out1 === null ? toggler("default", defaultContent1.call(this, ctx, node, key + \`\\u00021\`)) : safeOutput(out1, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`misc > other complex template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, callHandler, withKey, attrValue, createRef, zero, withoutZero, callTemplate, createComponent } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['selectProject'](ctx['project']), ctx, ev);
  const hdlr_fn2 = (ctx, ev) => callHandler(ctx['toggleSettingsMenu'], ctx, ev);
  const hdlr_fn3 = (ctx, ev) => callHandler(ctx['toggleMore'], ctx, ev);
  const hdlr_fn4 = (ctx, ev) => callHandler(ctx['updateFilter'], ctx, ev);
  const hdlr_fn5 = (ctx, ev) => callHandler(ctx['clearSearch'], ctx, ev);
  const hdlr_fn6 = (ctx, ev) => callHandler(ctx['updateTriggerDisplay'], ctx, ev);
  const hdlr_fn7 = (ctx, ev) => callHandler(ctx['triggerAll'], ctx, ev);
  const hdlr_fn8 = (ctx, ev) => callHandler(ctx['triggerNone'], ctx, ev);
  const hdlr_fn9 = (ctx, ev) => callHandler(ctx['triggerDefault'], ctx, ev);
  const comp1 = createComponent(app, \`BundlesList\`, true, false, false, ["bundles","category_custom_views","search"]);
  const comp2 = createComponent(app, \`BundlesList\`, true, false, false, ["bundles","search"]);
  
  const block1_handlers = [hdlr_fn2, hdlr_fn3, hdlr_fn4, hdlr_fn4, hdlr_fn5];
  let block1 = createBlock(\`<div><header><nav class="navbar navbar-expand-md navbar-light bg-light"><a block-attribute-0="href"><b style="color:#777;"><block-child-0/></b></a><button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#top_menu_collapse"><span class="navbar-toggler-icon"/></button><div class="collapse navbar-collapse" id="top_menu_collapse" aria-expanded="false"><ul class="nav navbar-nav ml-auto text-right" id="top_menu"><block-child-1/><li class="nav-item divider"/><block-child-2/></ul><div><div class="input-group input-group-sm"><div class="input-group-prepend input-group-sm"><button class="btn btn-default fa fa-cog" title="Settings" block-handler-1="click"/><button class="btn btn-default" block-handler-2="click"> More </button><block-child-3/></div><input class="form-control" type="text" placeholder="Search" aria-label="Search" name="search" block-sync-property-3="value" block-handler-4="keyup" block-handler-5="change" block-ref="6"/><div class="input-group-append"><button class="btn btn-default fa fa-eraser" block-handler-7="click"/></div></div></div></div></nav></header><div class="container-fluid" block-ref="8"><div class="row"><div class="form-group col-md-6"><h5>Triggers</h5><block-child-4/></div></div></div><div class="container-fluid frontend"><div class="row"><div class="col-md-12"><block-child-5/></div><div class="col-md-12"><block-child-6/><block-child-7/><block-child-8/></div></div></div></div>\`, block1_handlers);
  const block4_handlers = [hdlr_fn1];
  let block4 = createBlock(\`<li class="nav-item"><a class="nav-link" href="#" block-handler-0="click"><block-child-0/></a></li>\`, block4_handlers);
  let block7 = createBlock(\`<li class="nav-item dropdown"><b><a class="nav-link" block-attribute-0="href">Login</a></b></li>\`);
  let block10 = createBlock(\`<li class="nav-item"><a href="/runbot/errors" class="nav-link text-danger" block-attribute-0="title"><i class="fa fa-bug"/><block-child-0/></a></li>\`);
  let block12 = createBlock(\`<li class="nav-item divider"/>\`);
  let block14 = createBlock(\`<li class="nav-item"><a href="/runbot/errors" class="nav-link" title="Random Bugs"><i class="fa fa-bug"/></a></li>\`);
  let block15 = createBlock(\`<li class="nav-item divider"/>\`);
  let block16 = createBlock(\`<li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><b><span><block-child-0/></span></b></a><div class="dropdown-menu js_usermenu" role="menu"><a class="dropdown-item" id="o_logout" role="menuitem" block-attribute-0="href">Logout</a><a class="dropdown-item" role="menuitem" block-attribute-1="href">Web</a></div></li>\`);
  let block18 = createBlock(\`<select class="custom-select" name="category" id="category"><block-child-0/></select>\`);
  let block20 = createBlock(\`<option block-attribute-0="value" block-sync-property-1="selected"><block-child-0/></option>\`);
  const block25_handlers = [hdlr_fn6];
  let block25 = createBlock(\`<div class="form-check"><input class="form-check-input" type="checkbox" block-attribute-0="name" block-attribute-1="id" block-sync-property-2="checked" block-attribute-3="data-trigger_id" block-handler-4="change"/><label class="form-check-label" block-attribute-5="for"><block-child-0/></label></div>\`, block25_handlers);
  const block27_handlers = [hdlr_fn7, hdlr_fn8, hdlr_fn9, hdlr_fn2];
  let block27 = createBlock(\`<div><button class="btn btn-sm btn-default" block-handler-0="click">All</button><button class="btn btn-sm btn-default" block-handler-1="click">None</button><button class="btn btn-sm btn-info" block-handler-2="click">Default</button><button class="btn btn-sm btn-default" block-handler-3="click">Close</button></div>\`, block27_handlers);
  let block29 = createBlock(\`<div class="alert alert-warning" role="alert"><block-child-0/> </div>\`);
  let block31 = createBlock(\`<div class="mb32"><h1>No project</h1></div>\`);
  let block32 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3, b6, b18, b22, b28, b29, b31, b32;
    let attr1 = \`/runbot/\${ctx['project'].slug}\`;
    b2 = safeOutput(ctx['project'].name, node, key, "\\u00021");
    const ctx1 = ctx;
    const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['projects']);
    for (let i1 = 0; i1 < l_block3; i1++) {
      let ctx = Object.create(ctx1);
      ctx["project"] = k_block3[i1];
      const key1 = ctx['project'].id;
      const b5 = safeOutput(ctx['project'].name, node, key, "\\u00022", 1, key1);
      c_block3[i1] = withKey(block4([ctx], [b5], block4_handlers), key1);
    }
    b3 = list(c_block3);
    if (ctx['user']) {
      let b7, b8;
      if (ctx['user'].public) {
        let attr2 = \`/web/login?redirect=/\`;
        b7 = block7([attr2]);
      } else {
        let b9, b13, b16;
        if (ctx['nb_assigned_errors']&&ctx['nb_assigned_errors']>0) {
          let attr3 = \`You have \${ctx['nb_assigned_errors']} random bug assigned\`;
          const b11 = safeOutput(ctx['nb_assigned_errors'], node, key, "\\u00023");
          const b10 = block10([attr3], [b11]);
          const b12 = block12();
          b9 = multi([b10, b12]);
        } else if (ctx['nb_build_errors']&&ctx['nb_build_errors']>0) {
          const b14 = block14();
          const b15 = block15();
          b13 = multi([b14, b15]);
        }
        const b17 = safeOutput(ctx['user'].name.length>25?ctx['user'].namesubstring(0,23)+'...':ctx['user'].name, node, key, "\\u00024");
        let attr4 = \`/web/session/logout?redirect=/\`;
        let attr5 = \`/web\`;
        b16 = block16([attr4, attr5], [b17]);
        b8 = multi([b9, b13, b16]);
      }
      b6 = multi([b7, b8]);
    }
    if (ctx['categories']&&ctx['categories'].length>1) {
      const ctx2 = ctx;
      const [k_block19, v_block19, l_block19, c_block19] = prepareList(ctx['categories']);
      for (let i1 = 0; i1 < l_block19; i1++) {
        let ctx = Object.create(ctx2);
        ctx["category"] = k_block19[i1];
        const key1 = ctx['category'].id;
        let attr6 = attrValue(ctx['category'].id);
        let prop1 = attrValue(ctx['category'].id==ctx['options'].active_category_id);
        const b21 = safeOutput(ctx['category'].name, node, key, "\\u00025", 1, key1);
        c_block19[i1] = withKey(block20([attr6, prop1], [b21]), key1);
      }
      const b19 = list(c_block19);
      b18 = block18([], [b19]);
    }
    let prop2 = attrValue(ctx['search'].value);
    let ref1 = createRef(ctx['search_input'], node);
    let ref2 = createRef(ctx['settings_menu'], node);
    if (ctx['triggers']) {
      const ctx3 = ctx;
      const [k_block23, v_block23, l_block23, c_block23] = prepareList(ctx['triggers']);
      for (let i1 = 0; i1 < l_block23; i1++) {
        let ctx = Object.create(ctx3);
        ctx["trigger"] = k_block23[i1];
        const key1 = ctx['trigger'].id;
        let b25;
        if (!ctx['trigger'].manual&&ctx['trigger'].project_id===ctx['project'].id&&ctx['trigger'].category_id===ctx['options'].active_category_id) {
          let attr7 = \`trigger_\${ctx['trigger'].id}\`;
          let attr8 = \`trigger_\${ctx['trigger'].id}\`;
          let prop3 = attrValue(ctx['options'].trigger_display[ctx['trigger'].id]);
          let attr9 = attrValue(ctx['trigger'].id);
          let attr10 = \`trigger_\${ctx['trigger'].id}\`;
          const b26 = safeOutput(ctx['trigger'].name, node, key, "\\u00026", 1, key1);
          b25 = block25([attr7, attr8, prop3, attr9, ctx, attr10], [b26], block25_handlers);
        }
        c_block23[i1] = withKey(multi([b25]), key1);
      }
      const b23 = list(c_block23);
      const b27 = block27([ctx, ctx, ctx, ctx], null, block27_handlers);
      b22 = multi([b23, b27]);
    }
    if (ctx['load_infos']) {
      b28 = callTemplate(\`LOAD_INFOS_TEMPLATE\`, this, app, ctx[zero] ? withoutZero(ctx) : ctx, node, key + \`\\u00027\`);
    }
    if (ctx['message']) {
      const b30 = safeOutput(ctx['message'], node, key, "\\u00028");
      b29 = block29([], [b30]);
    }
    if (!ctx['project']) {
      b31 = block31();
    } else {
      const b33 = comp1({bundles: ctx['bundles'].sticky,category_custom_views: ctx['category_custom_views'],search: ctx['search']}, key + \`\\u00029\`, node, this, null);
      const b34 = comp2({bundles: ctx['bundles'].dev,search: ctx['search']}, key + \`\\u000210\`, node, this, null);
      b32 = block32([], [b33, b34]);
    }
    return block1([attr1, ctx, ctx, prop2, ctx, ctx, ref1, ctx, ref2], [b2, b3, b6, b18, b22, b28, b29, b31, b32], block1_handlers);
  }
}"
`;

exports[`names taken from the template are data in the generated code > slot names and slot scope 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    return text(\`x\`);
  }
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key + \`\\u00021\`, "it's", false, {v: 1});
    const b4 = comp1({slots: {"it's": {__render: slot1, __ctx: ctx, __owner: this, __scope: "s\\""}}}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b4]);
  }
}"
`;

exports[`names taken from the template are data in the generated code > t-as 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, withKey } = helpers;
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList([1]);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["\${globalThis.__nameRan = true}"] = k_block1[i1];
      const key1 = 1;
      c_block1[i1] = withKey(text(\`x\`), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`names taken from the template are data in the generated code > t-set name 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue } = helpers;
  
  let block1 = createBlock(\`<b/>\`);
  
  function value1(ctx, node, key = "") {
    return block1();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["a\\"b"] = 1;
    ctx["c\`d"] = new LazyValue(value1, ctx, this, node, key + \`\\u00021\`);
    return text(\`ok\`);
  }
}"
`;

exports[`static text and attributes keep every \${ as text 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div title="\\\${a}\\\${b}">\\\${a} and \\\${b}</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
